[package]
name = "muffler"
version = "0.2.0-dev0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "muffler"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
ndarray = { version = "0.15", features = ["rayon"] }
numpy = "0.22"
pyo3-log = "0.11.0"
rayon = "1.9.0"

[dependencies.pyo3]
version = "0.22"
features = ["extension-module", "auto-initialize"]

[dependencies.smartcore]
git = "https://github.com/smartcorelib/smartcore.git"
rev = "239c00428f7448d30b78bf8653923f6bc0e2c29b"
features = ["ndarray-bindings", "serde"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dev-dependencies]
rand = "0.8.5"
