[workspace]
resolver = "3"
members = [
    "py/muffler",
    "rs/muffler",
    "rs/muffler-python",
]

[workspace.package]
version = "0.1.0"
authors = ["Najib Ishaq <najib.ishaq@zoho.com>"]
edition = "2024"
repository = "https://github.com/nishaq503/muffler"
license-file = "LICENSE"

[workspace.dependencies]
muffler = { path = "rs/muffler" }
muffler-python = { path = "rs/muffler-python" }

pyo3 = "0.25"
clap = "4.5"
paste = "1.0.15"
bincode = "2.0.1"
ndarray = "0.16.1"
numpy = "0.25.0"
rand = "0.9.1"
rayon = "1.10.0"
serde = "1.0.219"
# smartcore = { git = "https://github.com/nishaq503/smartcore.git", branch = "feat/clone" }
smartcore = "0.4.1"
pyo3-log = "0.12.4"
