[package]
name = "py_muffler"
description = "Unsupervised Denoising of time-series data."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file = "LICENSE"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# muffler = { workspace = true }
muffler-python = { workspace = true }
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { workspace = true, features = ["extension-module", "abi3-py313"] }
pyo3-log = { workspace = true }
