[project]
name = "muffler"
version = "0.1.0"
description = "Unsupervised denoising of time series data."
readme = "README.md"
license = "LICENSE"
authors = [
    { name = "Najib Ishaq", email = "najib_ishaq@zoho.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "typer>=0.15.4",
]

[tool.maturin]
module-name = "muffler._core"
python-packages = ["muffler"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "plotly>=6.2.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.10",
    "streamlit>=1.46.1",
]
