[package]
name = "muffler-python"
description = "Enables Python bindings for the muffler crate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
muffler = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true, features = ["abi3-py313", "multiple-pymethods"] }
smartcore.workspace = true
