[package]
name = "muffler"
description = "Undupervised denoising pf time-series data."
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
ndarray = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rayon = { workspace = true }
bincode = { workspace = true, features = ["serde", "derive"] }
smartcore = { workspace = true, features = ["ndarray-bindings", "serde"] }

[[bin]]
name = "muffler"
path = "src/bin/muffler.rs"

[dev-dependencies]
paste = { workspace = true }
rand = { workspace = true }
